# rgb-consensus

./: .cursorrules  CLAUDE.md  Cargo.toml  llms.txt
.github/: copilot-instructions.md
src/: stl.rs
src/commit_verify/: id.rs
src/commit_verify/mpc/: block.rs  tree.rs
src/dbc/opret/: mod.rs
src/dbc/tapret/: mod.rs  tx.rs
src/validation/: logic.rs
src/vm/: op_contract.rs
