[package]
name = "rgb-consensus"
version = "0.11.1-rc.7"
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
description = "RGB Consensus Library: confidential & scalable smart contracts on Bitcoin & Lightning (consensus layer)"
repository = "https://github.com/rgb-protocol/rgb-consensus"
homepage = "https://rgb.info"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82.0"
exclude = [".github"]

[lib]
name = "rgbcore"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[dependencies]
rgb-aluvm = { version = "~0.11.1-rc.1", features = [
    "rgb-ascii-armor",
    "std",
] }
amplify = { version = "=4.8.1", features = [
    "rand",
] }
baid64 = "=0.4.1"
base85 = "=2.0.0"
bitcoin = { version = "0.32.8", features = [
    "serde",
] }
chrono = "0.4.38"
daggy = { version = "0.9.0", features = [
    "serde-1",
] }
hex-conservative = "0.2.1"
mime = "~0.3.17"
rand = "0.9.1"
ripemd = "0.1.3"
secp256k1 = { version = "0.29.1", features = [
    "global-context",
    "rand",
] }
serde_crate = { package = "serde", version = "1", features = [
    "derive",
], optional = true }
sha2 = "0.10.8"
single_use_seals = "~0.11.1-alpha.2"
rgb-strict-encoding = { version = "~1.0.0", features = [
    "bitcoin",
] }
rgb-strict-types = { version = "~1.0.0", features = [
    "armor",
] }

[features]
default = []
all = [
    "serde",
]
stl = [
    "rgb-aluvm/stl",
]
serde = [
    "rgb-aluvm/serde",
    "amplify/serde",
    "secp256k1/serde",
    "serde_crate",
    "rgb-strict-encoding/serde",
    "rgb-strict-types/serde",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom2 = { version = "0.2", package = "getrandom", features = [
    "js",
] }
getrandom = { version = "0.3", features = [
    "wasm_js",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
rgb-strict-encoding = { git = "https://github.com/rgb-protocol/rgb-strict-encoding", branch = "master" }
rgb-ascii-armor = { git = "https://github.com/rgb-protocol/rgb-ascii-armor", branch = "master" }
rgb-strict-types = { git = "https://github.com/rgb-protocol/rgb-strict-types", branch = "master" }
rgb-aluvm = { git = "https://github.com/rgb-protocol/rgb-aluvm", branch = "master" }
